Closed Bug 602927 Opened 14 years ago Closed 14 years ago

Swipe doesn't care about orientation

Categories

(Core Graveyard :: Widget: Qt, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: tatiana, Assigned: tatiana)

References

Details

Attachments

(1 file)

Attached patch patchSplinter Review
bug #590565 swipe implementation ignores landscape/portrait
Assignee: nobody → tanya.meshkova
Blocks: 590565
Status: NEW → ASSIGNED
Attachment #481879 - Flags: review?(romaxa)
Attachment #481879 - Flags: review?(romaxa) → review+
Comment on attachment 481879 [details] [diff] [review]
patch

this is needed in order to get swipe working not only in landscape, but portrait mode too
Attachment #481879 - Flags: approval2.0?
tracking-fennec: --- → 2.0b2+
Attachment #481879 - Flags: approval2.0?
http://hg.mozilla.org/mozilla-central/rev/4e58833f409a
Status: ASSIGNED → RESOLVED
tracking-fennec: 2.0b2+ → ---
Closed: 14 years ago
Resolution: --- → FIXED
Flags: in-litmus?
Flags: in-testsuite?
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: