Bug 602927 - Swipe doesn't care about orientation. r=romaxa a=npodb